--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,15 +30,33 @@
             1,
             {
                 "extensions": [
+                    ".ts",
+                    ".tsx",
                     ".js",
                     ".jsx",
-                    "ts",
-                    "tsx"
+                    ".js",
+                    ".jsx"
                 ]
             }
         ]
     },
     "settings": {
+        "import/resolver": {
+            "alias": {
+                "map": [
+                    [
+                        "@",
+                        "./src"
+                    ]
+                ],
+                "extensions": [
+                    ".ts",
+                    ".tsx",
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        },
         "react": {
             "version": "detect"
         }
