--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Social-network",
+  "name": "Template",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -16,11 +16,13 @@
     "@vitejs/plugin-react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "vite": "^4.1.1"
+    "vite": "^4.1.1",
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
+    "@types/node": "^20.1.3",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
@@ -29,6 +31,7 @@
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
@@ -38,6 +41,6 @@
     "typescript": "4.9.3"
   },
   "engines": {
-    "node": "16.17.0"
+    "node": "18.12.1"
   }
 }
