--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,19 +26,39 @@
         "@typescript-eslint"
     ],
     "rules": {
+        "no-use-before-define": "off",
+        "@typescript-eslint/no-use-before-define": "off",
         "react/jsx-filename-extension": [
             1,
             {
                 "extensions": [
+                    ".ts",
+                    ".tsx",
                     ".js",
                     ".jsx",
-                    "ts",
-                    "tsx"
+                    ".js",
+                    ".jsx"
                 ]
             }
         ]
     },
     "settings": {
+        "import/resolver": {
+            "alias": {
+                "map": [
+                    [
+                        "@",
+                        "./src"
+                    ]
+                ],
+                "extensions": [
+                    ".ts",
+                    ".tsx",
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        },
         "react": {
             "version": "detect"
         }
