add exclude js files in eslintrc, tsconfig

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -60,5 +60,11 @@
         "react": {
             "version": "detect"
         }
-    }
+    },
+    "exclude": [
+        "test",
+        "node_modules",
+        "dist",
+        "**/*.js"
+    ]
 }
