add settings ts config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,10 +23,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "removeComments": true
   },
   "include": [
-    "src",
+    "src/**/*",
     ".eslintrc.json",
     "vite.config.ts"
   ],
