--- a/package.json
+++ b/package.json
@@ -2,31 +2,35 @@
   "name": "Template",
   "version": "0.0.0",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "stylelint": "stylelint src/**/*.css",
-    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx"
+    "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "clean": "rimraf node_modules",
+    "clean-build": "rimraf dist"
   },
   "author": "Alexey Machehin",
   "dependencies": {
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rimraf": "^5.0.1",
     "vite": "^4.1.1",
     "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
-    "@emotion/react": "11.10.5",
-    "@emotion/styled": "11.10.5",
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
     "@types/node": "^20.1.3",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.33.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -36,11 +40,11 @@
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "stylelint": "15.0.0",
-    "stylelint-config-standard": "30.0.1",
-    "typescript": "4.9.3"
+    "stylelint": "15.10.1",
+    "stylelint-config-standard": "34.0.0",
+    "typescript": "5.1.6"
   },
   "engines": {
-    "node": "18.12.1"
+    "node": "18.16.1"
   }
 }
