add eslint settings, netlify.toml

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "stylelint": "stylelint src/**/*.css",
+    "stylelint-fix": "stylelint src/**/*.css --fix",
     "eslint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "eslint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "clean": "rimraf node_modules",
     "clean-build": "rimraf dist"
   },
