--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
     "rules": {
         "no-use-before-define": "off",
         "@typescript-eslint/no-use-before-define": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
         "react/jsx-filename-extension": [
             1,
             {
