--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,12 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build.environment]
+  NODE_VERSION = "18.16.1"
+
+[[headers]]
+  for = "/fonts/*.woff"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Content-Type = "application/font-woff"  
